TS-4162: Add proxy.config.http2.active_timeout_in

Current default value is 0 for compatibility with existing 6.x code.
This is going to be changed by TS-4167 in 7.0.0.